--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://admin:admin@cluster0.7wmbp.mongodb.net/meal-prep
-SESSION_SECRET=mealprep
+MONGODB_URI=mongodb://localhost:27017/starter-app
+JWT_SECRET=starterapp
