--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "starter-nodejs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon"
   },
-  "keywords": [],
+  "keywords": [
+    "nodejs",
+    "express",
+    "jwt",
+    "multer",
+    "mongoose"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,7 +25,8 @@
     "joi": "^17.3.0",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
