--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/starter-app
-JWT_SECRET=starterapp
+MONGODB_URI=mongodb://localhost:27017/cartzilla-eshop
+JWT_SECRET=cartzilla123@
 NODE_ENV =development
 
 
