--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb://localhost:27017/cartzilla-eshop
-JWT_SECRET=cartzilla123@
+JWT_SECRET=cartzilla123@11
 NODE_ENV =development
 
 SMTP_HOST=smtp.ethereal.email
